tests/baselines/reference/classMemberWithMissingIdentifier.errors.txt
tests/cases/compiler/classMemberWithMissingIdentifier.ts(2,11): error TS1146: Declaration expected.
tests/cases/compiler/classMemberWithMissingIdentifier.ts(2,12): error TS1005: '=' expected.


==== tests/cases/compiler/classMemberWithMissingIdentifier.ts (2 errors) ====
    class C { 
        public {};
              
!!! error TS1146: Declaration expected.
               ~
!!! error TS1005: '=' expected.
    }